# joincpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
.github/workflows/: static.yml
examples/: example1.cpp  example2.cpp
include/: join.h  meta.h  stringify.h
include/joincpp/: join.h  meta.h  stringify.h
test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
